--- a/page1.html
+++ b/page1.html
@@ -42,15 +42,40 @@
     </div>
     <!-- end header -->
     <!-- image header -->
-    <!-- <div class="image-clip-top"></div> -->
+    <div>
+      <div class="image-clip-top">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1000 100"
+          preserveAspectRatio="none"
+        >
+          <path
+            fill="#ffffff"
+            d="M1000,4.3V0H0v4.3C0.9,23.1,126.7,99.2,500,100S1000,22.7,1000,4.3z"
+          ></path>
+        </svg>
+      </div>
 
-    <div class="image-hearder">
-      <img src="./assets//img/headline_image2.png" />
+      <div class="image-hearder">
+        <div class="box">
+          <img src="./assets//img/headline_image2.png" />
+        </div>
+      </div>
+      <div class="image-clip-bottom">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1000 100"
+          preserveAspectRatio="none"
+        >
+          <path
+            fill="#ffffff"
+            d="M1000,4.3V0H0v4.3C0.9,23.1,126.7,99.2,500,100S1000,22.7,1000,4.3z"
+          ></path>
+        </svg>
+      </div>
     </div>
-
     <!-- image header -->
     <!-- benefit -->
-
     <div class="container">
       <div class="justify-content-center row box-benefit-title">
         <h2 class="title-benefit">
@@ -123,7 +148,18 @@
 
     <!-- benefit -->
     <!-- description -->
-
+    <div class="description-top">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1000 100"
+        preserveAspectRatio="none"
+      >
+        <path
+          fill="#ffffff"
+          d="M1000,4.3V0H0v4.3C0.9,23.1,126.7,99.2,500,100S1000,22.7,1000,4.3z"
+        ></path>
+      </svg>
+    </div>
     <div class="wrepper-description">
       <div class="box-text">
         <p>
