--- a/page2.html
+++ b/page2.html
@@ -473,7 +473,9 @@
         <img src="./assets/img/download-1-1.gif" alt="garansi montclair" />
       </div>
       <div class="page-2-img-desc">
-        <img src="./assets/img/ctawa-ver2-1.gif" alt="garansi montclair" />
+        <a href="https://wa.me/628161969601">
+          <img src="./assets/img/ctawa-ver2-1.gif" alt="garansi montclair" />
+        </a>
       </div>
       <footer class="page-2-footer px-2 py-2">
         <p><strong>The Vida Building</strong></p>
