--- a/page1.html
+++ b/page1.html
@@ -188,7 +188,7 @@
     <div class="col-12 mt-5">
       <div class="row">
         <div class="col-sm-12">
-          <a href="http://">
+          <a href="https://wa.me/628161969601">
             <img
               src="./assets/img/tombol-wa-kotak.gif"
               alt="order penumbuh rambut"
@@ -236,7 +236,7 @@
 <div class="container-fluid py-5">
   <div class="row">
     <div class="col-12">
-      <a href="http://"
+      <a href="https://wa.me/628161969601"
         ><img
           src="./assets/img/new-silver-new-price.jpg"
           alt="new silver new price"
@@ -253,7 +253,7 @@
     <div class="col-12 mt-5">
       <div class="row">
         <div class="col-sm-12">
-          <a href="http://">
+          <a href="https://wa.me/628161969601">
             <img
               src="./assets/img/tombol-wa-kotak.gif"
               alt="order penumbuh rambut"
